--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 // Primeira versão alpha
 
 {
-  "name": "pix-code-generator",
+  "name": "pix-code-api",
   "compatibility_date": "2025-04-16",
   "main": "src/worker.js",
   "routes": [
