--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,11 @@
 {
   "name": "pix-code-api",
-  "compatibility_date": "2025-04-16",
+  "compatibility_date": "2025-06-20",
   "main": "src/worker.js",
   "routes": [
     {
-      "pattern": "api.sl.app.br",
-      "custom_domain": true
+      "pattern": "api.samuellopes.com.br/v2/*",
+      "zone_name": "samuellopes.com.br"
     }
   ],
   "observability": {
